Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "pst-vectorian.doc.tar.xz": c760a0827e8f2aaf6b45b8168fdbe1b6caf7a316
-  "pst-vectorian.tar.xz": 22c1ff7b9a42396c2f91d4b32f509782225a837d
+  pst-vectorian.doc.r60488.tar.xz: e94ab06d536952ab24618b8d74c645515ab77f15
+  pst-vectorian.r60488.tar.xz: b196ca1b55b29674931903344c6c0fdc5d58ea95
